# football-simulator

./: Cargo.toml
src/: fifa.rs  game.rs  main.rs  presenter.rs  simulator.rs  style.css  test.js
